--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                 It was inspired by some of the designs in BEHANCE and recreated the design.
                                  It is the landing page of the food delivery business, which focuses on food, drinks, and groceries.
                             </p> <br> <br>
-                           Tools : Figma</p>
+                           Tools : Figma, Framer</p>
                             <a href="https://food-delivery-anytime.framer.website/" class="custom-link">Explore</a>
                         </div>
                     </div>
@@ -281,7 +281,7 @@
                                 It was inspired by some of the designs in BEHANCE and recreated the design.
                                 It is the landing page of the boxing traning center that help the inspiring boxer to enhance thier skills.
                             </p> <br> <br>
-                           Tools : Figma</p>
+                           Tools : Figma, Framer</p>
                             <a href="https://boxinglanding-page.framer.website/" class="custom-link">Explore</a>
                         </div>
                     </div>
